Switch to maven profiles, add gh workflow for tests and add package f… (#55)
* Switch to maven profiles, add gh workflow for tests and add package for jdk20 specific code

* Make syntax changes so java11 jdk can build jvector