@@ -70,116 +70,174 @@
       </resource>
     </resources>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
-        <configuration>
-          <source>20</source>
-          <target>20</target>
-          <compilerArgs>
-            <arg>--add-modules</arg>
-            <arg>jdk.incubator.vector</arg>
-          </compilerArgs>
-        </configuration>
-        <executions>
-          <execution>
-            <id>jdk20</id>
+
+    </plugins>
+  </build>
+  <profiles>
+    <profile>
+      <id>jdk20</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
             <configuration>
               <source>20</source>
               <target>20</target>
-              <enablePreview>true</enablePreview>
               <compilerArgs>
                 <arg>--add-modules</arg>
                 <arg>jdk.incubator.vector</arg>
               </compilerArgs>
-              <outputDirectory>${project.build.outputDirectory}_jdk20</outputDirectory>
             </configuration>
-          </execution>
-          <execution>
-            <id>jdk11</id>
-            <configuration>
-              <excludes>
-                <exclude>com/github/jbellis/jvector/example/Bench.java</exclude>
-              </excludes>
-              <source>11</source>
-              <target>11</target>
-              <compilerArgs>
-                <arg>--add-modules</arg>
-                <arg>jdk.incubator.vector</arg>
-              </compilerArgs>
-              <outputDirectory>${project.build.outputDirectory}_jdk11</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.3.0</version>
-        <executions>
-          <execution>
-            <id>jar-jdk11</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-            <configuration>
-              <classifier>jdk11</classifier>
-              <classesDirectory>${project.build.outputDirectory}_jdk11</classesDirectory>
-            </configuration>
-          </execution>
-          <execution>
-            <id>jar-jdk20</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.3.0</version>
             <configuration>
               <classifier>jdk20</classifier>
-              <classesDirectory>${project.build.outputDirectory}_jdk20</classesDirectory>
             </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>3.1.0</version>
-        <executions>
-          <execution>
-            <id>sift</id>
-            <goals>
-              <goal>exec</goal>
-            </goals>
+          </plugin>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.1.2</version>
             <configuration>
-              <executable>${java.home}/bin/java</executable>
-              <arguments>
-                <argument>-classpath</argument>
-                <classpath/>
-                <argument>--add-modules=jdk.incubator.vector</argument>
-                <argument>-ea</argument>
-                <argument>com.github.jbellis.jvector.example.SiftSmall</argument>
-              </arguments>
+              <forkCount>1</forkCount>
+              <argLine>
+                --add-modules=jdk.incubator.vector
+                --enable-preview
+              </argLine>
             </configuration>
-          </execution>
-          <execution>
-            <id>bench</id>
-            <goals>
-              <goal>exec</goal>
-            </goals>
+            <dependencies>
+              <dependency>
+                <groupId>org.junit.vintage</groupId>
+                <artifactId>junit-vintage-engine</artifactId>
+                <version>5.9.1</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.1.0</version>
+            <executions>
+              <execution>
+                <id>sift</id>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>${java.home}/bin/java</executable>
+                  <arguments>
+                    <argument>-classpath</argument>
+                    <classpath/>
+                    <argument>--add-modules=jdk.incubator.vector</argument>
+                    <argument>-ea</argument>
+                    <argument>com.github.jbellis.jvector.example.SiftSmall</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+              <execution>
+                <id>bench</id>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>${java.home}/bin/java</executable>
+                  <arguments>
+                    <argument>-classpath</argument>
+                    <classpath/>
+                    <argument>--add-modules=jdk.incubator.vector</argument>
+                    <argument>-Xmx32G</argument>
+                    <argument>-ea</argument>
+                    <argument>com.github.jbellis.jvector.example.Bench</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jdk11</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
             <configuration>
-              <executable>${java.home}/bin/java</executable>
-              <arguments>
-                <argument>-classpath</argument>
-                <classpath/>
-                <argument>--add-modules=jdk.incubator.vector</argument>
-                <argument>-Xmx32G</argument>
-                <argument>-ea</argument>
-                <argument>com.github.jbellis.jvector.example.Bench</argument>
-              </arguments>
+              <source>11</source>
+              <target>11</target>
+              <excludes>
+                <exclude>**/jdk20/*.java</exclude>
+              </excludes>
             </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.3.0</version>
+            <configuration>
+              <classifier>jdk11</classifier>
+            </configuration>
+          </plugin>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.1.2</version>
+            <dependencies>
+              <dependency>
+                <groupId>org.junit.vintage</groupId>
+                <artifactId>junit-vintage-engine</artifactId>
+                <version>5.9.1</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.1.0</version>
+            <executions>
+              <execution>
+                <id>sift</id>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>${java.home}/bin/java</executable>
+                  <arguments>
+                    <argument>-classpath</argument>
+                    <classpath/>
+                    <argument>-ea</argument>
+                    <argument>com.github.jbellis.jvector.example.SiftSmall</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+              <execution>
+                <id>bench</id>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>${java.home}/bin/java</executable>
+                  <arguments>
+                    <argument>-classpath</argument>
+                    <classpath/>
+                    <argument>-Xmx32G</argument>
+                    <argument>-ea</argument>
+                    <argument>com.github.jbellis.jvector.example.Bench</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
